# GreenForge

./: .gitignore  AUTH_DATABASE_ISSUES.md  AUTH_IMPLEMENTATION_SUMMARY.md  CODEBASE_ANALYSIS_AND_IMPROVEMENT_IDEAS.md  CODE_REVIEW_ISSUES.md  DEPLOYMENT.md  GreenForge_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  PROJECT_OVERVIEW.md  README.md  ROLE_SWITCHER_FEATURE.md  SUSTAINABILITY_FEATURES_PLAN.md  TEST_RESULTS.md  build.sh  package-lock.json  package.json  render-backup.yaml  render-simple.yaml  render-static.yaml  render.yaml
ChainFund-backend/ChainFund/rust-contracts/: CHAINFUND_CONTRACTS.md  Cargo.toml  README.md  build.ps1  deploy-chainfund.ps1  deploy.ps1  deploy.sh  deployed_addresses.json
ChainFund-backend/ChainFund/rust-contracts/bridge_protocol/src/: lib.rs
ChainFund-backend/ChainFund/rust-contracts/chainfund_core/: Cargo.toml
ChainFund-backend/ChainFund/rust-contracts/chainfund_core/src/: lib.rs
ChainFund-backend/ChainFund/rust-contracts/chainfund_sbt/: Cargo.toml
ChainFund-backend/ChainFund/rust-contracts/chainfund_sbt/src/: lib.rs
ChainFund-backend/ChainFund/rust-contracts/project_funding/: Cargo.toml
ChainFund-backend/ChainFund/rust-contracts/project_funding/src/: lib.rs
ChainFund-backend/ChainFund/rust-contracts/reward_token/: Cargo.toml
ChainFund-backend/ChainFund/rust-contracts/reward_token/src/: lib.rs
ChainFund-backend/ChainFund/rust-contracts/reward_token/target-wasm/: .rustc_info.json
ChainFund-backend/ChainFund/rust-contracts/reward_token/target-wasm/release/.fingerprint/autocfg-04d9de11f9bd4e09/: lib-autocfg  lib-autocfg.json
ChainFund-backend/ChainFund/rust-contracts/reward_token/target-wasm/wasm32-unknown-unknown/release/: reward_token.d
ChainFund-backend/ChainFund/rust-contracts/src/: lib.rs  test.rs
(+365 files in other folders)
