[package]
name = "chainfund_core"
version = "1.0.0"
edition = "2021"
description = "ChainFund - AI-Verified Trustless Crowdfunding Smart Contract"
authors = ["ChainFund Team"]

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = "21.0.0"

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
lto = true
codegen-units = 1
panic = "abort"

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
