[package]
name = "chainfund-sbt"
version = "0.1.0"
edition = "2021"
description = "SoulBound Token (SBT) contract for ChainFund reputation system"
license = "MIT"
repository = "https://github.com/chainfund/chainfund-sbt"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = "21.0.0"

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
